# SLIM-IGL

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  FastLsBuildUtils.cpp  FastLsBuildUtils.h  GlobalLocalParametrization.cpp  Linesearch.cpp  Linesearch.h  LinesearchParametrizer.cpp  LinesearchParametrizer.h  LocalWeightedArapParametrizer.cpp  LocalWeightedArapParametrizer.h  Param_State.cpp  Param_State.h  SLIMData.cpp  SLIMData.h  Slim.cpp  Slim.h  SymmetricDirichlet.cpp  WeightedGlobalLocal.cpp  WeightedGlobalLocal.h  flip_avoiding_line_search.cpp  flip_avoiding_line_search.h  geometric_utils.cpp  geometric_utils.h  line_search.cpp  line_search.h  main.cpp  parametrization_utils.cpp  parametrization_utils.h
